--- a/demo.html
+++ b/demo.html
@@ -16,8 +16,8 @@
     var c = new ChineseFrequency();
     console.log(c);
 
+    // getters and setters
     c.setInput(str);
-
     console.log('INPUT-STRING:' + c.getInput());
 
     // convenience method to detect list building success
