use javascript filename convention

--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <script src="IdxHanyuPinyinMicro.js"></script>
-  <script src="IdxExtraPinyin.js"></script>
-  <script src="ChineseFrequency.js"></script>
+  <script src="idx-hanyupinyin-micro.js"></script>
+  <script src="idx-extrapinyin.js"></script>
+  <script src="chinese-frequency.js"></script>
 
   <script type="text/javascript">
 
