add template to demo

--- a/demo.html
+++ b/demo.html
@@ -65,6 +65,16 @@
   <script src="idx-extrapinyin.js"></script>
   <script src="chinese-frequency.js"></script>
 
+<!--
+/**
+ * name     : demo.html
+ * version  : -
+ * updated  : 2015-08-05
+ * license  : http://unlicense.org/ The Unlicense
+ * git      : https://github.com/pffy/javascript-chinese-frequency
+ *
+ */
+-->
 
 </body>
 </html>
